objects/System_Limits_Tracker__c.object
<CustomObject>
    <description>RN - CloudSmiths 
Object where a developers can track running and system limits that are not available in Apex. e.g. Single Outbound Email limits</description>
    <fields>
        <fullName>Activate_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths</description>
        <label>Activate Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Threshold__c</fullName>
        <formula>( X24_Running_Limit__c / System_Limit__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Enforce_Workaround_Percentage__c</fullName>
        <description>RN - CloudSmiths
Workaround threshold percentage. If this threshold is reached Salesforce will by pass the process that counts towards this specific limit and use an alternative process</description>
        <inlineHelpText>Enter a Workaround threshold percentage. If this threshold is reached Salesforce will by pass the process that counts towards this specific limit and use an alternative process</inlineHelpText>
        <label>Enforce Workaround Percentage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Limit_Was_Reset_At__c</fullName>
        <description>RN - CloudSmiths
When was the 24 hour limit reset by the system</description>
        <inlineHelpText>When was the 24 hour limit reset by the system</inlineHelpText>
        <label>Limit Was Reset At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>System_Limit__c</fullName>
        <description>RN - CloudSmiths
The current Salesforce system limit as</description>
        <inlineHelpText>Please enter the current Salesforce system limit</inlineHelpText>
        <label>System Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_WorkAround__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RN - CloudSmiths
Flag that could be used by code to by pass current processes and user alternative processes</description>
        <inlineHelpText>Set this flag to switch between the current process and the alternative workaround process. If CHECKED the workaround process will be enforced.</inlineHelpText>
        <label>Use WorkAround</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warning_Percentage__c</fullName>
        <description>RN - CloudSmiths 
If this percentage threshold is reached SF will send an email notification to Absa SF Support</description>
        <inlineHelpText>Enter a warning threshold percentage. If this threshold is reached Salesforce will send an email notification to Absa Salesforce Support</inlineHelpText>
        <label>Warning Percentage</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Warning_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warning Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24_Running_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <description>RN - CloudSmiths
The current running limit within a 24 hour cycle</description>
        <inlineHelpText>The current running limit within a 24 hour cycle - This value gets reset at 12:00GMT</inlineHelpText>
        <label>24 Hour Running Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Limits Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>System_Limit__c</columns>
        <columns>X24_Running_Limit__c</columns>
        <columns>Current_Threshold__c</columns>
        <columns>Warning_Percentage__c</columns>
        <columns>Enforce_Workaround_Percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Limits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Limits Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>